--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
-.App{
-  min-height: 100vh;
-  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+* {
+  margin: 0;
+}
+
+.App {
+  background-color: grey
 }
 
 .search-form {
@@ -16,14 +19,14 @@
   padding: 10px;
 }
 
-.search-button{
+.search-button {
   background: lightcoral;
   border: none;
   padding: 10px 20px;
   color: aliceblue;
 }
 
-.recipes{
+.recipes {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
